# egon

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  cursor.py  doc.txt  egon.py  output.py  pyproject.toml  tests.py
tests/destination/foo/: foo_two.txt
tests/source/: fizz.txt
tests/source/foo/: foo_two.txt
