[tool.poetry]
name = "egon"
version = "0.1.0"
description = "Syncronizes directories."
authors = ["Jan Willems <jw@elevenbts.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"fs.sshfs" = "^0.12.2"
pre-commit = "^2.3.0"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
