[tool.poetry]
name = "egon"
version = "0.1.0"
description = "Syncronizes directories."
authors = ["Jan Willems <jw@elevenbts.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"fs.sshfs" = "^0.12.3"
click = "^7.1.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
black = "^19.10b0"
pytest = "^6.1.0"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
